// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccountImagesReducers should handle all defined error types: rejected types 1`] = `
Object {
  "result": Object {
    "instances": Object {
      "account": Object {},
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "images": Array [],
      "pending": false,
      "updateImages": false,
    },
  },
  "type": "ADD_ACCOUNT_REJECTED",
}
`;

exports[`AccountImagesReducers should handle all defined error types: rejected types 2`] = `
Object {
  "result": Object {
    "instances": Object {
      "account": Object {},
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "images": Array [],
      "pending": false,
      "updateImages": false,
    },
  },
  "type": "DELETE_ACCOUNT_REJECTED",
}
`;

exports[`AccountImagesReducers should handle all defined error types: rejected types 3`] = `
Object {
  "result": Object {
    "instances": Object {
      "account": Object {},
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "images": Array [],
      "pending": false,
      "updateImages": false,
    },
  },
  "type": "DELETE_ACCOUNTS_REJECTED",
}
`;

exports[`AccountImagesReducers should handle all defined error types: rejected types 4`] = `
Object {
  "result": Object {
    "instances": Object {
      "account": Object {},
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "images": Array [],
      "pending": false,
      "updateImages": false,
    },
  },
  "type": "GET_ACCOUNT_REJECTED",
}
`;

exports[`AccountImagesReducers should handle all defined error types: rejected types 5`] = `
Object {
  "result": Object {
    "instances": Object {
      "account": Object {},
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "images": Array [],
      "pending": false,
      "updateImages": false,
    },
  },
  "type": "GET_ACCOUNTS_REJECTED",
}
`;

exports[`AccountImagesReducers should handle all defined error types: rejected types 6`] = `
Object {
  "result": Object {
    "instances": Object {
      "account": Object {},
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "images": Array [],
      "pending": false,
      "updateImages": false,
    },
  },
  "type": "UPDATE_ACCOUNTS_REJECTED",
}
`;

exports[`AccountImagesReducers should handle all defined error types: rejected types 7`] = `
Object {
  "result": Object {
    "instances": Object {
      "account": Object {},
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "images": Array [],
      "pending": false,
      "updateImages": false,
    },
  },
  "type": "UPDATE_ACCOUNT_REJECTED",
}
`;

exports[`AccountImagesReducers should handle all defined error types: rejected types 8`] = `
Object {
  "result": Object {
    "instances": Object {
      "account": Object {},
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "images": Array [],
      "pending": false,
      "updateImages": false,
    },
  },
  "type": "UPDATE_ACCOUNT_FIELD_REJECTED",
}
`;

exports[`AccountImagesReducers should handle all defined error types: rejected types 9`] = `
Object {
  "result": Object {
    "instances": Object {
      "account": Object {},
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "images": Array [],
      "pending": false,
      "updateImages": false,
    },
  },
  "type": "UPDATE_ACCOUNT_IMAGE_REJECTED",
}
`;

exports[`AccountImagesReducers should handle all defined error types: rejected types 10`] = `
Object {
  "result": Object {
    "instances": Object {
      "account": Object {},
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "images": Array [],
      "pending": false,
      "updateImages": false,
    },
  },
  "type": "UPDATE_ACCOUNT_IMAGE_FIELD_REJECTED",
}
`;

exports[`AccountImagesReducers should handle all defined error types: rejected types 11`] = `
Object {
  "result": Object {
    "instances": Object {
      "account": Object {},
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "error": true,
      "errorMessage": "ERROR",
      "errorStatus": 0,
      "fulfilled": false,
      "images": Array [],
      "pending": false,
      "updateImages": false,
    },
  },
  "type": "GET_ACCOUNT_IMAGES_REJECTED",
}
`;

exports[`AccountImagesReducers should handle all defined error types: rejected types 12`] = `
Object {
  "result": Object {
    "instances": Object {
      "account": Object {},
      "dailyUsage": Array [],
      "error": true,
      "errorMessage": "ERROR",
      "errorStatus": 0,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "images": Array [],
      "pending": false,
      "updateImages": false,
    },
  },
  "type": "GET_ACCOUNT_IMAGES_INSTANCES_REJECTED",
}
`;

exports[`AccountImagesReducers should handle all defined error types: rejected types 13`] = `
Object {
  "result": Object {
    "instances": Object {
      "account": Object {},
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "images": Array [],
      "pending": false,
      "updateImages": false,
    },
  },
  "type": "GET_ACCOUNT_INSTANCES_REJECTED",
}
`;

exports[`AccountImagesReducers should handle all defined error types: rejected types 14`] = `
Object {
  "result": Object {
    "instances": Object {
      "account": Object {},
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "images": Array [],
      "pending": false,
      "updateImages": false,
    },
  },
  "type": "ADD_ACCOUNT_SHOW_REJECTED",
}
`;

exports[`AccountImagesReducers should handle all defined error types: rejected types 15`] = `
Object {
  "result": Object {
    "instances": Object {
      "account": Object {},
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "images": Array [],
      "pending": false,
      "updateImages": false,
    },
  },
  "type": "UPDATE_ACCOUNT_HIDE_REJECTED",
}
`;

exports[`AccountImagesReducers should handle all defined error types: rejected types 16`] = `
Object {
  "result": Object {
    "instances": Object {
      "account": Object {},
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "images": Array [],
      "pending": false,
      "updateImages": false,
    },
  },
  "type": "EDIT_ACCOUNT_SHOW_REJECTED",
}
`;

exports[`AccountImagesReducers should handle all defined error types: rejected types 17`] = `
Object {
  "result": Object {
    "instances": Object {
      "account": Object {},
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "images": Array [],
      "pending": false,
      "updateImages": false,
    },
  },
  "type": "EDIT_ACCOUNT_HIDE_REJECTED",
}
`;

exports[`AccountImagesReducers should handle all defined fulfilled types: fulfilled types 1`] = `
Object {
  "result": Object {
    "instances": Object {
      "account": Object {},
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "images": Array [],
      "pending": false,
      "updateImages": false,
    },
  },
  "type": "ADD_ACCOUNT_FULFILLED",
}
`;

exports[`AccountImagesReducers should handle all defined fulfilled types: fulfilled types 2`] = `
Object {
  "result": Object {
    "instances": Object {
      "account": Object {},
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "images": Array [],
      "pending": false,
      "updateImages": false,
    },
  },
  "type": "DELETE_ACCOUNT_FULFILLED",
}
`;

exports[`AccountImagesReducers should handle all defined fulfilled types: fulfilled types 3`] = `
Object {
  "result": Object {
    "instances": Object {
      "account": Object {},
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "images": Array [],
      "pending": false,
      "updateImages": false,
    },
  },
  "type": "DELETE_ACCOUNTS_FULFILLED",
}
`;

exports[`AccountImagesReducers should handle all defined fulfilled types: fulfilled types 4`] = `
Object {
  "result": Object {
    "instances": Object {
      "account": Object {},
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "images": Array [],
      "pending": false,
      "updateImages": false,
    },
  },
  "type": "GET_ACCOUNT_FULFILLED",
}
`;

exports[`AccountImagesReducers should handle all defined fulfilled types: fulfilled types 5`] = `
Object {
  "result": Object {
    "instances": Object {
      "account": Object {},
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "images": Array [],
      "pending": false,
      "updateImages": false,
    },
  },
  "type": "GET_ACCOUNTS_FULFILLED",
}
`;

exports[`AccountImagesReducers should handle all defined fulfilled types: fulfilled types 6`] = `
Object {
  "result": Object {
    "instances": Object {
      "account": Object {},
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "images": Array [],
      "pending": false,
      "updateImages": false,
    },
  },
  "type": "UPDATE_ACCOUNTS_FULFILLED",
}
`;

exports[`AccountImagesReducers should handle all defined fulfilled types: fulfilled types 7`] = `
Object {
  "result": Object {
    "instances": Object {
      "account": Object {},
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "images": Array [],
      "pending": false,
      "updateImages": false,
    },
  },
  "type": "UPDATE_ACCOUNT_FULFILLED",
}
`;

exports[`AccountImagesReducers should handle all defined fulfilled types: fulfilled types 8`] = `
Object {
  "result": Object {
    "instances": Object {
      "account": Object {},
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "images": Array [],
      "pending": false,
      "updateImages": false,
    },
  },
  "type": "UPDATE_ACCOUNT_FIELD_FULFILLED",
}
`;

exports[`AccountImagesReducers should handle all defined fulfilled types: fulfilled types 9`] = `
Object {
  "result": Object {
    "instances": Object {
      "account": Object {},
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "images": Array [],
      "pending": false,
      "updateImages": true,
    },
  },
  "type": "UPDATE_ACCOUNT_IMAGE_FULFILLED",
}
`;

exports[`AccountImagesReducers should handle all defined fulfilled types: fulfilled types 10`] = `
Object {
  "result": Object {
    "instances": Object {
      "account": Object {},
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "images": Array [],
      "pending": false,
      "updateImages": true,
    },
  },
  "type": "UPDATE_ACCOUNT_IMAGE_FIELD_FULFILLED",
}
`;

exports[`AccountImagesReducers should handle all defined fulfilled types: fulfilled types 11`] = `
Object {
  "result": Object {
    "instances": Object {
      "account": Object {},
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": true,
      "images": Array [
        "success",
      ],
      "pending": false,
      "updateImages": false,
    },
  },
  "type": "GET_ACCOUNT_IMAGES_FULFILLED",
}
`;

exports[`AccountImagesReducers should handle all defined fulfilled types: fulfilled types 12`] = `
Object {
  "result": Object {
    "instances": Object {
      "account": Object {},
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": true,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "images": Array [],
      "pending": false,
      "updateImages": false,
    },
  },
  "type": "GET_ACCOUNT_IMAGES_INSTANCES_FULFILLED",
}
`;

exports[`AccountImagesReducers should handle all defined fulfilled types: fulfilled types 13`] = `
Object {
  "result": Object {
    "instances": Object {
      "account": Object {},
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "images": Array [],
      "pending": false,
      "updateImages": false,
    },
  },
  "type": "GET_ACCOUNT_INSTANCES_FULFILLED",
}
`;

exports[`AccountImagesReducers should handle all defined fulfilled types: fulfilled types 14`] = `
Object {
  "result": Object {
    "instances": Object {
      "account": Object {},
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "images": Array [],
      "pending": false,
      "updateImages": false,
    },
  },
  "type": "ADD_ACCOUNT_SHOW_FULFILLED",
}
`;

exports[`AccountImagesReducers should handle all defined fulfilled types: fulfilled types 15`] = `
Object {
  "result": Object {
    "instances": Object {
      "account": Object {},
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "images": Array [],
      "pending": false,
      "updateImages": false,
    },
  },
  "type": "UPDATE_ACCOUNT_HIDE_FULFILLED",
}
`;

exports[`AccountImagesReducers should handle all defined fulfilled types: fulfilled types 16`] = `
Object {
  "result": Object {
    "instances": Object {
      "account": Object {},
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "images": Array [],
      "pending": false,
      "updateImages": false,
    },
  },
  "type": "EDIT_ACCOUNT_SHOW_FULFILLED",
}
`;

exports[`AccountImagesReducers should handle all defined fulfilled types: fulfilled types 17`] = `
Object {
  "result": Object {
    "instances": Object {
      "account": Object {},
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "images": Array [],
      "pending": false,
      "updateImages": false,
    },
  },
  "type": "EDIT_ACCOUNT_HIDE_FULFILLED",
}
`;

exports[`AccountImagesReducers should handle all defined pending types: pending types 1`] = `
Object {
  "result": Object {
    "instances": Object {
      "account": Object {},
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "images": Array [],
      "pending": false,
      "updateImages": false,
    },
  },
  "type": "ADD_ACCOUNT_PENDING",
}
`;

exports[`AccountImagesReducers should handle all defined pending types: pending types 2`] = `
Object {
  "result": Object {
    "instances": Object {
      "account": Object {},
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "images": Array [],
      "pending": false,
      "updateImages": false,
    },
  },
  "type": "DELETE_ACCOUNT_PENDING",
}
`;

exports[`AccountImagesReducers should handle all defined pending types: pending types 3`] = `
Object {
  "result": Object {
    "instances": Object {
      "account": Object {},
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "images": Array [],
      "pending": false,
      "updateImages": false,
    },
  },
  "type": "DELETE_ACCOUNTS_PENDING",
}
`;

exports[`AccountImagesReducers should handle all defined pending types: pending types 4`] = `
Object {
  "result": Object {
    "instances": Object {
      "account": Object {},
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "images": Array [],
      "pending": false,
      "updateImages": false,
    },
  },
  "type": "GET_ACCOUNT_PENDING",
}
`;

exports[`AccountImagesReducers should handle all defined pending types: pending types 5`] = `
Object {
  "result": Object {
    "instances": Object {
      "account": Object {},
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "images": Array [],
      "pending": false,
      "updateImages": false,
    },
  },
  "type": "GET_ACCOUNTS_PENDING",
}
`;

exports[`AccountImagesReducers should handle all defined pending types: pending types 6`] = `
Object {
  "result": Object {
    "instances": Object {
      "account": Object {},
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "images": Array [],
      "pending": false,
      "updateImages": false,
    },
  },
  "type": "UPDATE_ACCOUNTS_PENDING",
}
`;

exports[`AccountImagesReducers should handle all defined pending types: pending types 7`] = `
Object {
  "result": Object {
    "instances": Object {
      "account": Object {},
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "images": Array [],
      "pending": false,
      "updateImages": false,
    },
  },
  "type": "UPDATE_ACCOUNT_PENDING",
}
`;

exports[`AccountImagesReducers should handle all defined pending types: pending types 8`] = `
Object {
  "result": Object {
    "instances": Object {
      "account": Object {},
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "images": Array [],
      "pending": false,
      "updateImages": false,
    },
  },
  "type": "UPDATE_ACCOUNT_FIELD_PENDING",
}
`;

exports[`AccountImagesReducers should handle all defined pending types: pending types 9`] = `
Object {
  "result": Object {
    "instances": Object {
      "account": Object {},
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "images": Array [],
      "pending": false,
      "updateImages": false,
    },
  },
  "type": "UPDATE_ACCOUNT_IMAGE_PENDING",
}
`;

exports[`AccountImagesReducers should handle all defined pending types: pending types 10`] = `
Object {
  "result": Object {
    "instances": Object {
      "account": Object {},
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "images": Array [],
      "pending": false,
      "updateImages": false,
    },
  },
  "type": "UPDATE_ACCOUNT_IMAGE_FIELD_PENDING",
}
`;

exports[`AccountImagesReducers should handle all defined pending types: pending types 11`] = `
Object {
  "result": Object {
    "instances": Object {
      "account": Object {},
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "images": Array [],
      "pending": true,
      "updateImages": false,
    },
  },
  "type": "GET_ACCOUNT_IMAGES_PENDING",
}
`;

exports[`AccountImagesReducers should handle all defined pending types: pending types 12`] = `
Object {
  "result": Object {
    "instances": Object {
      "account": Object {},
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": true,
    },
    "view": Object {
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "images": Array [],
      "pending": false,
      "updateImages": false,
    },
  },
  "type": "GET_ACCOUNT_IMAGES_INSTANCES_PENDING",
}
`;

exports[`AccountImagesReducers should handle all defined pending types: pending types 13`] = `
Object {
  "result": Object {
    "instances": Object {
      "account": Object {},
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "images": Array [],
      "pending": false,
      "updateImages": false,
    },
  },
  "type": "GET_ACCOUNT_INSTANCES_PENDING",
}
`;

exports[`AccountImagesReducers should handle all defined pending types: pending types 14`] = `
Object {
  "result": Object {
    "instances": Object {
      "account": Object {},
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "images": Array [],
      "pending": false,
      "updateImages": false,
    },
  },
  "type": "ADD_ACCOUNT_SHOW_PENDING",
}
`;

exports[`AccountImagesReducers should handle all defined pending types: pending types 15`] = `
Object {
  "result": Object {
    "instances": Object {
      "account": Object {},
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "images": Array [],
      "pending": false,
      "updateImages": false,
    },
  },
  "type": "UPDATE_ACCOUNT_HIDE_PENDING",
}
`;

exports[`AccountImagesReducers should handle all defined pending types: pending types 16`] = `
Object {
  "result": Object {
    "instances": Object {
      "account": Object {},
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "images": Array [],
      "pending": false,
      "updateImages": false,
    },
  },
  "type": "EDIT_ACCOUNT_SHOW_PENDING",
}
`;

exports[`AccountImagesReducers should handle all defined pending types: pending types 17`] = `
Object {
  "result": Object {
    "instances": Object {
      "account": Object {},
      "dailyUsage": Array [],
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "instancesOpenshift": 0,
      "instancesRhel": 0,
      "pending": false,
    },
    "view": Object {
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "images": Array [],
      "pending": false,
      "updateImages": false,
    },
  },
  "type": "EDIT_ACCOUNT_HIDE_PENDING",
}
`;
